# ESP32-Daikin

./: AGENTS.md  CMakeLists.txt  DONE.md  README.md  done.md  generate_settings.py  setup_submodules.bat  setup_submodules.py
ESP/: CMakeLists.txt  Makefile  sdkconfig.defaults
ESP/include/: err.h
ESP/main/: CMakeLists.txt  Faikin.c  bleenv.c  bleenv.h  settings.def
Manuals/: Architecture.md  Setup.md
Tools/: integration_plan.md
